--- a/00-Starter-Seed/regular-webapp/app/views/user.scala.html
+++ b/00-Starter-Seed/regular-webapp/app/views/user.scala.html
@@ -10,7 +10,7 @@
      <h1 id="logo"><img src="//cdn.auth0.com/samples/auth0_logo_final_blue_RGB.png" /></h1>
      <img class="avatar" src='@((profile \ "picture").as[String])'/>
      <h2>Welcome @((profile \ "name").as[String])</h2>
-     <a href="/logout" class="btn btn-lg">Logout</a>
+     <a href="/logout" id="qsLogoutBtn" class="btn btn-lg">Logout</a>
    </div>
  </div>
 </div>
