--- a/00-Starter-Seed/regular-webapp/app/views/index.scala.html
+++ b/00-Starter-Seed/regular-webapp/app/views/index.scala.html
@@ -6,7 +6,7 @@
         <img src="https://i.cloudup.com/StzWWrY34s.png" />
         <h3>Auth0 Example</h3>
         <p>Zero friction identity infrastructure, built for developers</p>
-        <a id="qsLoginBtn" class="btn btn-primary btn-lg btn-block" href="/login">SignIn</a>
+        <a id="qsLoginBtn" class="btn btn-primary btn-lg btn-block" href="/login">Sign in</a>
       </div>
     </div>
 </div>
